# hcmsfem

./: .gitignore  CONTRIBUTING.md  README.md  activate_env.py  generate_meshes.py  pyproject.toml  setup.py  setup_env.py  setup_vscode.py  vscode_settings.json
hcmsfem/: __init__.py  cli.py  gpu_interface.py  plot_utils.py  root.py  visualize_profile.py
hcmsfem/boundary_conditions/: __init__.py  boundary_conditions.py
hcmsfem/eigenvalues/: __init__.py  eigenvalues.py
hcmsfem/fespace/: __init__.py  fespace.py
hcmsfem/logger/: __init__.py  logger.py
hcmsfem/meshes/: __init__.py  mesh.py
hcmsfem/operators/: operator.py
hcmsfem/preconditioners/: __init__.py  coarse_space.py  preconditioners.py
hcmsfem/problem_type/: __init__.py  problem_type.py
hcmsfem/problems/: __init__.py  diffusion.py  problem.py
hcmsfem/solvers/: __init__.py  cg_iteration_bound.py  custom_cg.py  direct_sparse.py
hcmsfem/solvers/clib/: custom_cg.cpp
